// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/cloud_table cloud table displays without header 1`] = `
<CloudTable
  list={
    Array [
      Array [
        <ReaactEl>
          row 1
        </ReaactEl>,
        <ReaactEl>
          row 1
        </ReaactEl>,
        <ReaactEl>
          row 1
        </ReaactEl>,
      ],
      Array [
        <ReaactEl>
          row 2
        </ReaactEl>,
        <ReaactEl>
          row 2
        </ReaactEl>,
        <ReaactEl>
          row 2
        </ReaactEl>,
      ],
      Array [
        <ReaactEl>
          row 3
        </ReaactEl>,
        <ReaactEl>
          row 3
        </ReaactEl>,
        <ReaactEl>
          row 3
        </ReaactEl>,
      ],
    ]
  }
>
  <table
    className="CloudTable"
  >
    <thead />
    <tbody>
      <tr
        className="CloudTable__table-row"
        key="0"
      >
        <td
          key="0"
        >
          <ReaactEl>
            <p>
              row 1
            </p>
          </ReaactEl>
        </td>
        <td
          key="1"
        >
          <ReaactEl>
            <p>
              row 1
            </p>
          </ReaactEl>
        </td>
        <td
          key="2"
        >
          <ReaactEl>
            <p>
              row 1
            </p>
          </ReaactEl>
        </td>
      </tr>
      <tr
        className="CloudTable__table-row"
        key="1"
      >
        <td
          key="0"
        >
          <ReaactEl>
            <p>
              row 2
            </p>
          </ReaactEl>
        </td>
        <td
          key="1"
        >
          <ReaactEl>
            <p>
              row 2
            </p>
          </ReaactEl>
        </td>
        <td
          key="2"
        >
          <ReaactEl>
            <p>
              row 2
            </p>
          </ReaactEl>
        </td>
      </tr>
      <tr
        className="CloudTable__table-row"
        key="2"
      >
        <td
          key="0"
        >
          <ReaactEl>
            <p>
              row 3
            </p>
          </ReaactEl>
        </td>
        <td
          key="1"
        >
          <ReaactEl>
            <p>
              row 3
            </p>
          </ReaactEl>
        </td>
        <td
          key="2"
        >
          <ReaactEl>
            <p>
              row 3
            </p>
          </ReaactEl>
        </td>
      </tr>
    </tbody>
  </table>
</CloudTable>
`;

exports[`admin_console/cloud_table cloud table match snapshot 1`] = `
<table
  className="CloudTable"
>
  <thead>
    <tr
      className="CloudTable__table-header"
    >
      <th
        key="0"
      >
        <ReaactEl>
          header 1
        </ReaactEl>
      </th>
      <th
        key="1"
      >
        <ReaactEl>
          header 2
        </ReaactEl>
      </th>
      <th
        key="2"
      >
        <ReaactEl>
          header 3
        </ReaactEl>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="CloudTable__table-row"
      key="0"
    >
      <td
        key="0"
      >
        <ReaactEl>
          row 1
        </ReaactEl>
      </td>
      <td
        key="1"
      >
        <ReaactEl>
          row 1
        </ReaactEl>
      </td>
      <td
        key="2"
      >
        <ReaactEl>
          row 1
        </ReaactEl>
      </td>
    </tr>
    <tr
      className="CloudTable__table-row"
      key="1"
    >
      <td
        key="0"
      >
        <ReaactEl>
          row 2
        </ReaactEl>
      </td>
      <td
        key="1"
      >
        <ReaactEl>
          row 2
        </ReaactEl>
      </td>
      <td
        key="2"
      >
        <ReaactEl>
          row 2
        </ReaactEl>
      </td>
    </tr>
    <tr
      className="CloudTable__table-row"
      key="2"
    >
      <td
        key="0"
      >
        <ReaactEl>
          row 3
        </ReaactEl>
      </td>
      <td
        key="1"
      >
        <ReaactEl>
          row 3
        </ReaactEl>
      </td>
      <td
        key="2"
      >
        <ReaactEl>
          row 3
        </ReaactEl>
      </td>
    </tr>
  </tbody>
</table>
`;
